--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col-1 hour">
               9:00
           </div>
-          <textarea class="col-10 description">
+          <textarea id="9hr-event" class="col-10 description">
           </textarea>
           <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -43,7 +43,7 @@
         <div class="col-1 hour">
             10:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="10hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -52,7 +52,7 @@
         <div class="col-1 hour">
             11:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="11hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -61,7 +61,7 @@
         <div class="col-1 hour">
             12:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="12hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -70,7 +70,7 @@
         <div class="col-1 hour">
             13:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="13hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -79,7 +79,7 @@
         <div class="col-1 hour">
             14:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="14hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -88,7 +88,7 @@
         <div class="col-1 hour">
             15:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="15hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -97,7 +97,7 @@
         <div class="col-1 hour">
             16:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="16hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
@@ -106,7 +106,7 @@
         <div class="col-1 hour">
             17:00
         </div>
-        <textarea class="col-10 description">
+        <textarea id="17hr-event" class="col-10 description">
         </textarea>
         <button class="btn saveBtn col-1"><i class="fa-solid fa-floppy-disk"></i></button>
        </div>
